--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
 			<!-- site menu -->
 			<nav class="main-menu">
 				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="#sorghun">Sorghun</a></li>
-					<li><a href="#games">Games</a></li>
-					<li><a href="#parents">Parents/Schools</a></li>
+					<li><a href="http://eduairbox/welcome">Home</a></li>
+					<li><a href="#sorghun">EduAirGame</a></li>
+					<li><a href="#games">EduAirTeam</a></li>
+					<li><a href="#parents">Projects</a></li>
+					<li><a href="#parents">Demos</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
