--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>Sorghun</title>
+	<title>EduAirGame</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Serious console game for kids">
 	<meta name="keywords" content="game, serious, console">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->   
-	<link href="img/favicon.ico" rel="shortcut icon"/>
+	<link href="img/ico.ico" rel="shortcut icon"/>
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i" rel="stylesheet">
@@ -37,7 +37,7 @@
 		<div class="container">
 			<!-- logo -->
 			<a class="site-logo" href="index.html">
-				<img src="img/logo.png" alt="">
+				<img src="img/logo.png" height="30px" alt="">
 			</a>
 			<!-- responsive -->
 			<div class="nav-switch">
@@ -117,15 +117,14 @@
 				<div class="col-lg-6 col-md-6 p-0" style="margin-top: 150px;">
 					<div class="container">
 						<h1 class="this_talk">The best <span style="color:#ffb320;">Games</span> for kids</h1>
-						<img src="img/Sorghun_noir.png" style="width:50%">
+						<h1>EduAirGame</h1>
 						<h4>The first cloud gaming console in Africa. For the family and school</h4>
 						<p style="color: black;font-family: inherit;">
-							<strong>Sorghun</strong> is a games console containing educational games (serious games) <br> where children can learn to read, count, think in strategies <br> and manage their frustration with the problems they face while playing.
+							<strong>EduAirGame</strong> is a games console containing educational games (serious games) <br> where children can learn to read, count, think in strategies <br> and manage their frustration with the problems they face while playing.
 						</p>
 
-						<h2>$5/Month</h2>
 						<br>
-						<a href="mailto:contact@sorghun.com?subject=Order" class="site-btn" style="color: white;">Available for pre-order</a>
+						<a href="http://eduairbox.com/eduairgame" target="_blank" class="site-btn" style="color: white;">demo</a>
 					</div>
 					
 				</div>
@@ -285,10 +284,10 @@
 				<div class="col-lg-4 col-md-6">
 
 					<div class="footer-logo text-white">
-						<img src="img/footer-logo.png" alt="">
+						<img src="img/eduair_blanc.png" height="39" alt="">
 					</div>
 
-					<a href="mailto:contact@sorghun.com?subject=Order" class="site-btn" style="color: white;">Available for pre-order</a>
+					<a href="http://eduairbox.com/welcome" target="_blank" class="site-btn" style="color: white;">Demo</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<div class="footer-widget">
@@ -297,8 +296,8 @@
 							<div class="tc-item">
 								<div class="tc-thumb set-bg" data-setbg="img/contact-center-multimedia.png"></div>
 								<div class="tc-content">
-									<p>contact@sorghun.com</p>
-									<div class="tc-date">www.sorghun.com</div>
+									<p>contact@eduairbox.com</p>
+									<div class="tc-date">www.eduairbox.com</div>
 									<p>Douala - Cameroon</p>
 								</div>
 							</div>
@@ -314,15 +313,9 @@
 	<!-- Footer section -->
 	<footer class="footer-section">
 		<div class="container">
-			<ul class="footer-menu">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="#sorghun">Sorghun</a></li>
-				<li><a href="#games">Games</a></li>
-				<li><a href="#parents">Parents/Schools</a></li>
-				<li><a href="#contact">Contact</a></li>
-			</ul>
+			
 			<p class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-				Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved - Sorghun
+				Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved - EduAirBox
 				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 			</p>
 		</div>
