--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 			<div class="row">
 				<div class="col-lg-6 col-md-6">
 					<p style="color: black;font-size: 1.3em;margin-top: 50px;">
-						The Sorghun console emits a Wifi network for the home and up to 10 children can play simultaneously and interact in team scenarios for multi-player games.
+						The EduAirGame console emits a Wifi network for the home and up to 10 children can play simultaneously and interact in team scenarios for multi-player games.
 					</p>
 					<p>
 						<div style="float: right;">
