--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<!-- site menu -->
 			<nav class="main-menu">
 				<ul>
-					<li><a href="http://eduairbox.com/welcome">Home</a></li>
+					<li><a href="http://eduairbox.com/welcome/">Home</a></li>
 					<li><a href="#sorghun">EduAirGame</a></li>
 					<li><a href="#games">EduAirTeam</a></li>
 					<li><a href="#parents">Projects</a></li>
