--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<header class="header-section">
 		<div class="container">
 			<!-- logo -->
-			<a class="site-logo" href="index.html">
+			<a class="site-logo" href="http://eduairbox.com/welcome">
 				<img src="img/logo.png" height="30px" alt="">
 			</a>
 			<!-- responsive -->
@@ -46,8 +46,8 @@
 			<!-- site menu -->
 			<nav class="main-menu">
 				<ul>
-					<li><a href="http://eduairbox.com/welcome/">Home</a></li>
-					<li><a href="#sorghun">EduAirGame</a></li>
+					<li><a href="http://eduairbox.com/welcome">Home</a></li>
+					<li><a href="!">EduAirGame</a></li>
 					<li><a href="#games">EduAirTeam</a></li>
 					<li><a href="#parents">Projects</a></li>
 					<li><a href="#parents">Demos</a></li> 
