--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 			<nav class="main-menu">
 				<ul>
 					<li><a href="http://eduairbox.com/welcome">Home</a></li>
-					<li><a href="!">EduAirGame</a></li>
-					<li><a href="#games">EduAirTeam</a></li>
-					<li><a href="#parents">Projects</a></li>
-					<li><a href="#parents">Demos</a></li> 
+					<li><a href="#">EduAirGame</a></li>
+					<li><a href="http://eduairbox.com/eduairteam/">EduAirTeam</a></li>
+					<li><a href="http://eduairbox.com/iftech">Projects</a></li>
+					<li><a href="http://eduairbox.com/welcome/index.php/blog/">Blog</a></li> 
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
@@ -111,7 +111,7 @@
 			<div class="row">
 				<div class="col-lg-6 col-md-6 p-0">
 
-					<img src="img/sorghun.jpg" style="width: 100%;">
+					<img src="img/23553936-9a1a-41a4-a0f7-3c9894ccc164_900x__34208.1595013752.jpg" style="width: 100%;">
 					
 				</div>
 				<div class="col-lg-6 col-md-6 p-0" style="margin-top: 150px;">
@@ -287,7 +287,7 @@
 						<img src="img/eduair_blanc.png" height="39" alt="">
 					</div>
 
-					<a href="http://eduairbox.com/welcome" target="_blank" class="site-btn" style="color: white;">Demo</a>
+					<a href="http://eduairbox.com/eduairgame" target="_blank" class="site-btn" style="color: white;">Demo</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<div class="footer-widget">
